Added fallback images

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="project-tile">
           <a href="https://not-so-average-joe.netlify.app" target="_blank">
             <div id="img-1" class="img-container">
-              <img src="https://i.imgur.com/VffIRrp.png" alt="Learning Pathway Web Page">
+              <img src="https://i.imgur.com/VffIRrp.png" alt="Learning Pathway Web Page" onerror="this.onerror=null; this.src='/Images/Learning_Pathway.png'">
                 <div class="overlay">
                   <div class="text">Personal Learning Pathway</div>
                 </div>
@@ -36,7 +36,7 @@
           </a>
           <a href="https://not-so-average-joe.github.io/freeCodeCamp-Penguin/" target="_blank">
             <div id="img-2" class="img-container">
-              <img src="https://i.imgur.com/LaEkHAh.png" alt="Waving Penguin Web Page">
+              <img src="https://i.imgur.com/LaEkHAh.png" alt="Waving Penguin Web Page" onerror="this.onerror=null; this.src='/Images/Penguin.png'">
                 <div class="overlay">
                   <div class="text">Happy Penguin</div>
                 </div>
@@ -44,7 +44,7 @@
           </a>
           <a href="https://not-so-average-joe.github.io/freeCodeCamp-Skyline/" target="_blank">
             <div id="img-3" class="img-container">
-              <img src="https://i.imgur.com/6hDZOGJ.png" alt="Skyline Web Page">
+              <img src="https://i.imgur.com/6hDZOGJ.png" alt="Skyline Web Page" onerror="this.onerror=null; this.src='/Images/Skyline.png'">
                 <div class="overlay">
                   <div class="text">City Skyline</div>
                 </div>
@@ -52,7 +52,7 @@
           </a>
           <a href="https://not-so-average-joe.github.io/FreeCodeCamp-Documentation-Page/" target="_blank">
             <div id="img-4" class="img-container">
-              <img src="https://i.imgur.com/mE1mTye.png" alt="Documentation Web Page">
+              <img src="https://i.imgur.com/mE1mTye.png" alt="Documentation Web Page" onerror="this.onerror=null; this.src='/Images/Documentation.png'">
                 <div class="overlay">
                   <div class="text">Guitar Setup Documentation</div>
                 </div>
@@ -60,7 +60,7 @@
           </a>
           <a href="https://not-so-average-joe.github.io/freeCodeCamp-Product-Landing-Page/" target="_blank">
             <div id="img-5" class="img-container">
-              <img src="https://i.imgur.com/2iQVS7c.png" alt="Product Landing Page Web Page">
+              <img src="https://i.imgur.com/2iQVS7c.png" alt="Product Landing Page Web Page" onerror="this.onerror=null; this.src='/Images/Landing_Page.png'">
                 <div class="overlay">
                   <div class="text">Product Landing Page</div>
                 </div>
@@ -68,7 +68,7 @@
           </a>
           <a href="https://not-so-average-joe.github.io/What-Should-I-Learn-Today/" target="_blank">
             <div id="img-6" class="img-container">
-              <img src="https://i.imgur.com/o8O1oDt.png" alt="What Should I Learn Today Web Page">
+              <img src="https://i.imgur.com/o8O1oDt.png" alt="What Should I Learn Today Web Page" onerror="this.onerror=null; this.src='/Images/WSILT.png'">
                 <div class="overlay">
                   <div class="text">What Should I Learn Today</div>
                 </div>
